# docker

./: .gitignore  README.md
.github/workflows/: build-base.yml  build-python.yml  build-r.yml
base/: Dockerfile  README.md
base/rstudio/: Dockerfile  README.md
base/ssh/: Dockerfile  README.md
docs/: architecture.md  implementation-guide.md
examples/mixed-r-python/: .gitignore  Dockerfile  Dockerfile.rstudio  Dockerfile.ssh  Makefile  README.md  compose.yml  main.py  pyproject.toml
examples/mixed-r-python/.devcontainer/: devcontainer.json
examples/mixed-r-python/reports/: analysis.qmd
examples/mixed-r-python/scripts/python/: clustering.py  fetch_data.py
examples/mixed-r-python/scripts/r/: bridge_analysis.R  visualize.R
examples/python-uv-make/: Dockerfile  Dockerfile.rstudio  Dockerfile.ssh  Makefile  README.md  compose.yml  main.py  pyproject.toml
examples/python-uv-make/.devcontainer/: devcontainer.json
examples/python-uv-make/reports/: analysis.qmd
examples/r-renv-targets/: .dockerignore  .gitignore  Dockerfile  Dockerfile.rstudio  Dockerfile.ssh  README.md  _targets.R  _targets_packages.R  compose.yml
python/uv/: Dockerfile  README.md
python/uv-core/: Dockerfile
python/uv-rstudio/: Dockerfile  README.md
python/uv-ssh/: Dockerfile  README.md
r/renv/: Dockerfile  README.md
r/renv-core/: Dockerfile
r/renv-rstudio/: Dockerfile  README.md
r/renv-ssh/: Dockerfile  README.md
scripts/: build-all.sh  build-python-images.sh  build-r-images.sh  push-images.sh.deprecated
templates/: rstudio-template.Dockerfile  ssh-template.Dockerfile
(+8 files in other folders)
